# CMakeWindowsCppRestSdk

./: .travis.yml  CMakeLists.txt  CMakeProject1.cpp  README.md
include/: MyClass.h
src/: MyClass.cpp  cpp_rest.cc  cpp_rest_1.cpp  poco_http.cpp
src/rest/samples/BlackJack/BlackJack_UIClient/: BlackJack_UIClient141.vcxproj
src/rest/samples/FacebookDemo/: Package.uwp.appxmanifest
src/rest/samples/OAuth2Live/: App.xaml.cpp  App.xaml.h  MainPage.xaml.cpp  MainPage.xaml.h  OAuth2Live141.vcxproj
